public class PizzaCustomStyleStrasbourg extends Pizza {
    public PizzaCustomStyleStrasbourg(){
    }
}
