public class PizzaFromageStyleBrest extends Pizza {
    public PizzaFromageStyleBrest(){
    }
}
