public class PizzaFromageStyleStrasbourg extends Pizza{
    public PizzaFromageStyleStrasbourg(){

    }
}
