
public class PizzeriaBrest extends Pizzeria{

	public PizzeriaBrest() {
		
	}
}
