
public class PizzeriaStrasbourg extends Pizzeria{

	public PizzeriaStrasbourg() {
		
	}
	
}
