@startuml

title __TP3's Class Diagram__\n

  namespace  {
    class FabriquePizzaBrest {
    }
  }
  

  namespace  {
    class FabriquePizzaStrasbourg {
    }
  }
  

  namespace  {
    abstract class Pizza {
    }
  }
  

  namespace  {
    abstract class Pizza {
    }
  }
  

  namespace  {
    class PizzaCustomStyleBrest {
    }
  }
  

  namespace  {
    class PizzaCustomStyleStrasbourg {
    }
  }
  

  namespace  {
    abstract class PizzaFabrique {
    }
  }
  

  namespace  {
    class PizzaFromage {
    }
  }
  

  namespace  {
    class PizzaFromageStyleBrest {
    }
  }
  

  namespace  {
    class PizzaFromageStyleStrasbourg {
    }
  }
  

  namespace  {
    class PizzaGrecque {
    }
  }
  

  namespace  {
    class PizzaPoivrons {
    }
  }
  

  namespace  {
    class PizzaSavoyardeStyleBrest {
    }
  }
  

  namespace  {
    class PizzaSavoyardeStyleStrasbourg {
    }
  }
  

  namespace  {
    class Pizzeria {
    }
  }
  

  namespace  {
    abstract class Pizzeria {
    }
  }
  

  namespace  {
    class PizzeriaBrest {
    }
  }
  

  namespace  {
    class PizzeriaFabrique {
    }
  }
  

  namespace  {
    class PizzeriaStrasbourg {
    }
  }
  

  namespace  {
    class PizzeriaTest {
    }
  }
  

  FabriquePizzaBrest -up-|> PizzaFabrique
  FabriquePizzaStrasbourg -up-|> PizzaFabrique
  PizzaCustomStyleBrest -up-|> Pizza
  PizzaCustomStyleStrasbourg -up-|> Pizza
  PizzaFromage -up-|> Pizza
  PizzaFromageStyleBrest -up-|> Pizza
  PizzaFromageStyleStrasbourg -up-|> Pizza
  PizzaGrecque -up-|> Pizza
  PizzaPoivrons -up-|> Pizza
  PizzaSavoyardeStyleBrest -up-|> Pizza
  PizzaSavoyardeStyleStrasbourg -up-|> Pizza
  PizzeriaBrest -up-|> Pizzeria
  PizzeriaStrasbourg -up-|> Pizzeria


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
